game works plus jquery lib

--- a/jasmine-standalone-3.4.0/views/index.html
+++ b/jasmine-standalone-3.4.0/views/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="rockpaperStyle.css">
 
+     <script src="../lib/jqueryLib.js"></script>
+    <script src="../src/rockpaperJquery.js"></script>
     <script src="../src/Rockpaper.js"></script>
   </head>
   <body>
